welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:41: error: reassignment to val
	message=litMessage();
               ^